--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends:
  debhelper (>= 7.4.3)
  , npm
  , python (>= 2.7)
- , python-pip
+ , python-pip (>= 1.3)
  , python-setuptools
  , python-sphinx
  , python-twisted
